@@ -6,8 +6,11 @@
 #include "gdb/remote-sim.h"
 #include "sim-module.h"
 
+/* FIXME: Revisit.  */
+#ifdef HAVE_DV_SOCKSER
 MODULE_INSTALL_FN dv_sockser_install;
 #define MODULE_LIST dv_sockser_install,
+#endif
 
 /* Define this if the simulator supports profiling.
    See the mips simulator for an example.
